update adaptor